--- a/order_demo/src/main/resources/application.yml
+++ b/order_demo/src/main/resources/application.yml
@@ -15,3 +15,23 @@ spring:
       hibernate:
         format_sql: true
     show-sql: true
+
+# redis
+  redis:
+    url: 127.0.0.1
+    port: 6379
+    timeout: 1s # 레디스 서버에 명령어 전달하고 결과를 받을 때까지의 최대시간
+    connect-timeout: 3s # 커넥션 생성의 최대 시간
+
+# redis cluster
+    cluster:
+      # 클러스터 노드 주소 입력 콤마로 구분
+      nodes: 127.0.0.1:19999,127.0.0.1:19998,127.0.0.1:19997
+      # 샤딩 때문에 전체 데이터의 일부분만 각 노드에 저장, 이때 잘못된 노드에 데이터를 조회할 때 데이터를 저장한 노드로 리다이렉션 횟수 설정
+      max-redirects: 3
+
+# redis sentinel
+    sentinel:
+      master: REDIS_MASTER_NAME
+      #
+      nodes: 127.0.0.1:19999,127.0.0.1:19998,127.0.0.1:19997
